Stub out stream html.

--- a/src/sentry/static/sentry/ember/index.html
+++ b/src/sentry/static/sentry/ember/index.html
@@ -6,6 +6,231 @@
         <link rel="stylesheet" href="../css/sentry-simple.css">
     </head>
     <body>
-        
+        <header>
+            <div class="container">          
+                <div class="pull-right">
+                    <ul class="user-nav">
+                        <li><a href="#">Team Settings</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li class="dropdown-toggle"><a href="#"><span class="caret"></span></a></li>
+                    </ul>
+                </div>
+                <div class="project-dropdown">
+                    <a href="#" class="team-name">
+                        Sentry
+                        <span class="selected-project">Backend</span>
+                    </a>
+                </div>
+            </div>
+        </header>
+        <section id="content">
+            <div class="container">
+                <ul class="nav nav-tabs project-nav">
+                    <li class="pull-right search">
+                        <input type="text" placeholder="Search by id"/>
+                    </li>
+                    <li class="active"><a href="#">Stream</a></li>
+                    <li><a href="#">Explore</a></li>
+                    <li><a href="#">Project settings</a></li>
+                </ul>
+                <section id="stream">
+                    <div class="row">
+                        <div id="main" class="col-sm-9">
+                            <div class="stream-actions">
+                                <div class="btn-group pull-right">
+                                    <button type="button" class="btn btn-default">Prev</button>
+                                    <button type="button" class="btn btn-default">Next</button>
+                                </div>
+                                <a href="#" class="btn btn-default">Resolve all</a>
+                                <a href="#" class="btn btn-default">Pause</a>
+                                <div class="btn-group">
+                                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                    Sort by: Last seen <span class="caret"></span>
+                                  </button>
+                                  <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Priority</a></li>
+                                    <li><a href="#">Last seen</a></li>
+                                    <li><a href="#">First seen</a></li>
+                                    <li><a href="#">Frequency</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Total time spent</a></li>
+                                    <li><a href="#">Average time spent</a></li>
+                                  </ul>
+                                </div>
+                                <div class="btn-group">
+                                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                    Since: Jan 18th <span class="caret"></span>
+                                  </button>
+                                  <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Priority</a></li>
+                                    <li><a href="#">Last seen</a></li>
+                                    <li><a href="#">First seen</a></li>
+                                    <li><a href="#">Frequency</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Total time spent</a></li>
+                                    <li><a href="#">Average time spent</a></li>
+                                  </ul>
+                                </div>
+                            </div>
+                
+                            <ul class="events">
+                                <li class="event">
+                                    <div class="pull-right">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                            <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="count">209</div>
+                                    <div class="details">
+                                        <h3><a href="#">sentry.tasks.email in process_inbound_email</a></h3>
+                                        <p class="message">Inbound email from unknown address: kunal.kukreja@joshworkz.com</p>
+                                        <div class="meta">
+                                            <time>3 days ago</time>
+                                            <a href="note-count">3 notes</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="event">
+                                    <div class="pull-right">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                            <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="count">209</div>
+                                    <div class="details">
+                                        <h3><a href="#">sentry.tasks.email in process_inbound_email</a></h3>
+                                        <p class="message">Inbound email from unknown address: kunal.kukreja@joshworkz.com</p>
+                                        <div class="meta">
+                                            <time>3 days ago</time>
+                                            <a href="note-count">3 notes</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="event">
+                                    <div class="pull-right">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                            <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="count">209</div>
+                                    <div class="details">
+                                        <h3><a href="#">sentry.tasks.email in process_inbound_email</a></h3>
+                                        <p class="message">Inbound email from unknown address: kunal.kukreja@joshworkz.com</p>
+                                        <div class="meta">
+                                            <time>3 days ago</time>
+                                            <a href="note-count">3 notes</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="event">
+                                    <div class="pull-right">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                            <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="count">209</div>
+                                    <div class="details">
+                                        <h3><a href="#">sentry.tasks.email in process_inbound_email</a></h3>
+                                        <p class="message">Inbound email from unknown address: kunal.kukreja@joshworkz.com</p>
+                                        <div class="meta">
+                                            <time>3 days ago</time>
+                                            <a href="note-count">3 notes</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="event">
+                                    <div class="pull-right">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                            <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="count">209</div>
+                                    <div class="details">
+                                        <h3><a href="#">sentry.tasks.email in process_inbound_email</a></h3>
+                                        <p class="message">Inbound email from unknown address: kunal.kukreja@joshworkz.com</p>
+                                        <div class="meta">
+                                            <time>3 days ago</time>
+                                            <a href="note-count">3 notes</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="stream-actions">
+                                <div class="btn-group pull-right">
+                                    <button type="button" class="btn btn-default">Prev</button>
+                                    <button type="button" class="btn btn-default">Next</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="sidebar" class="col-sm-3">
+                            <ul class="nav nav-pills nav-stacked">
+                              <li class="active"><a href="#">All</a></li>
+                              <li><a href="#">Bookmarked</a></li>
+                            </ul>
+                            <div class="filter">
+                                <h5>Status</h5>
+                            </div>
+                            <div class="filter">
+                                <h5>Client</h5>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </section>
+        <!-- <footer>
+            <div class="container">
+                <div class="pull-right">
+                    <a href="#">Contribute</a>
+                    <a href="#">Translate</a>
+                </div>
+                Sentry 7.0.0-DEV (9765530)
+            </div>
+        </footer> -->
     </body>
 </html>
