--- a/src/sentry/static/sentry/ember/index.html
+++ b/src/sentry/static/sentry/ember/index.html
@@ -218,7 +218,7 @@
                             </ul>
                             <div class="filter">
                                 <h6><label for="status">Status</label></h6>
-                                <select id="status" class="contacts selectized" placeholder="Choose a status..." tabindex="-1" name="status">
+                                <select id="status" class="contacts selectized" placeholder="Choose a status..." name="status">
                                     <option value="">Choose a status...</option>
                                     <option value="0">Unresolved</option>
                                     <option value="1">Resolved</option>
@@ -227,7 +227,7 @@
                             </div>
                             <div class="filter">
                                 <h6><label for="client">Client</label></h6>
-                                <select id="select-to" class="contacts selectized" placeholder="Choose a client..." name="client">
+                                <select id="client" class="contacts selectized" placeholder="Choose a client..." name="client">
                                     <option value="">Choose a client...</option>
                                     <option value="0">Unresolved</option>
                                     <option value="1">Resolved</option>
