--- a/src/sentry/static/sentry/ember/index.html
+++ b/src/sentry/static/sentry/ember/index.html
@@ -704,7 +704,70 @@
             </ul>
             <div class="row">
                 <div class="col-sm-9">
-                <h4>Timeline</h4>
+                    <div class="box">
+                        <div class="box-header">
+                            <h4>Timeline</h4>
+                        </div>
+                        <ul class="timeline">
+                            <li class="timeline-item console">
+                                <div class="row">
+                                    <div class="col-sm-6 description">
+                                        <h5>Console</h5>
+                                        <p><strong>Severity</strong> info</p>
+                                        <p><strong>Message</strong> initialize page layout</p>
+                                    </div>
+                                    <div class="col-sm-6 graph">
+                                        <div class="bar-container" style="width: 24%">
+                                            <div class="bar"></div>
+                                            <div class="bar-label">22 ms</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="timeline-item user-action">
+                                <div class="row">
+                                    <div class="col-sm-6 description">
+                                        <h5>User click</h5>
+                                        <p><strong>element</strong> <code>button.sup</code></p>
+                                    </div>
+                                    <div class="col-sm-6 graph">
+                                        <div class="bar-container" style="margin-left: 24%; width: 24%">
+                                            <div class="bar"></div>
+                                            <div class="bar-label">22 ms</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="timeline-item ajax">
+                                <div class="row">
+                                    <div class="col-sm-6 description">
+                                        <h5>Ajax GET</h5>
+                                        <p><strong>element</strong> <code>button.sup</code></p>
+                                    </div>
+                                    <div class="col-sm-6 graph">
+                                        <div class="bar-container" style="margin-left: 48%; width: 10%">
+                                            <div class="bar"></div>
+                                            <div class="bar-label">22 ms</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="timeline-item error">
+                                <div class="row">
+                                    <div class="col-sm-6 description">
+                                        <h5>Error</h5>
+                                        <p><strong>element</strong> <code>button.sup</code></p>
+                                    </div>
+                                    <div class="col-sm-6 graph">
+                                        <div class="bar-container" style="margin-left: 58%; width: 42%">
+                                            <div class="bar"></div>
+                                            <div class="bar-label">22 ms</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-sm-3">
                     <ul class="nav nav-pills nav-stacked">
