--- a/src/sentry/static/sentry/ember/index.html
+++ b/src/sentry/static/sentry/ember/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Sentry</title>
         <link rel="stylesheet" href="../css/sentry-simple.css">
+        <link rel="stylesheet" href="../js/libs/google-code-prettify/prettify.css">
     </head>
-    <body>
+    <body onload="prettyPrint()">
         <script type="text/x-handlebars" data-template-name="application">
             <header>
                 <div class="container">          
@@ -735,7 +736,7 @@
                                                 </div>
                                                 <div class="blip-container" style="margin-left: 10%;">
                                                     <div class="blip"></div>
-                                                    <div class="blip-label">22 ms</div>
+                                                    <div class="blip-label">10s</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -765,7 +766,7 @@
                                                 </div>
                                                 <div class="blip-container" style="margin-left: 25%">
                                                     <div class="blip"></div>
-                                                    <div class="blip-label">22 ms</div>
+                                                    <div class="blip-label">30s</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -795,7 +796,7 @@
                                                 </div>
                                                 <div class="blip-container" style="margin-left: 60%">
                                                     <div class="blip"></div>
-                                                    <div class="blip-label">22 ms</div>
+                                                    <div class="blip-label">72s</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -841,7 +842,7 @@
                                                 </div>
                                                 <div class="blip-container" style="margin-left: 90%;">
                                                     <div class="blip"></div>
-                                                    <div class="blip-label">22 ms</div>
+                                                    <div class="blip-label">110s</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -874,6 +875,30 @@
                             </div>
                         </div>
                     </div>
+                    <div class="box" id="exception">
+                        <div class="box-header">
+                            <a href="#" class="box-toggle"></a>
+                            <h4>Exception</h4>
+                        </div>
+                        <div class="box-content with-padding">
+                            <div class="frame">
+                                <div class="frame-heading">
+                                <a href="#" class="context-toggle">Hide context</a>
+                                <strong>django/core/handlers/base.py:77</strong> in <code>wrapped_view</code></div>
+                                <div class="context">
+                                    <pre class="prettyprint linenums:73">
+# We could just do view_func.csrf_exempt = True, but decorators
+# are nicer if they don't have side-effects, so we return a new
+# function.
+def wrapped_view(*args, **kwargs):
+    return view_func(*args, **kwargs)
+wrapped_view.csrf_exempt = True
+return wraps(view_func, assigned=available_attrs(view_func))(wrapped_view)
+                                    </pre>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-3">
                     <ul class="nav nav-pills nav-stacked">
@@ -889,6 +914,7 @@
         <script type="text/javascript" src="../js/libs/handlebars-1.1.2.js"></script>
         <script type="text/javascript" src="../js/libs/ember-1.3.1.js"></script>
         <script type="text/javascript" src="../js/libs/selectize.js"></script>
+        <script type="text/javascript" src="../js/libs/google-code-prettify/prettify.js"></script>
 
         <script type="text/javascript" src="../js/app.js"></script>        
 
